--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Демо веб-сайт</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
 <h1>Вітаємо на демо-сайті!</h1>
-<p>Це демонстраційний контент.</p>
+<p>Контент з сервера:</p>
+<div id="content"></div>
 <script src="scripts/main.js"></script>
 </body>
 </html>
